[package]
categories = ["config", "parser-implementations"]
description = "mico (minimalistic config file format) encoder and decoder"
documentation = "https://docs.rs/mico"
edition = "2021"
homepage = "https://github.com/tobx/mico"
license-file = "LICENSE"
name = "mico"
readme = "README.md"
repository = "https://github.com/tobx/mico"
version = "0.1.2"

[dependencies]
thiserror = "1.0.30"
